--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-player": "^3.1.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.6.2",
